# nuvolaris-metaflow

./: .gitignore  README.md  Taskfile.yaml  generated_cli.txt  poetry.lock.bck  profile.ipy  pyproject.toml
.devcontainer/: devcontainer.json
examples/: helloworld.py  helloworld2.py  helloworld3.py  ml-example.py
metaflow_extensions/nuvolaris/config/: mfextinit_nuvolaris.py
metaflow_extensions/nuvolaris/datatools/: imported.py  mfextinit_nuvolaris.py
metaflow_extensions/nuvolaris/exceptions/: mfextinit_nuvolaris.py
metaflow_extensions/nuvolaris/plugins/: mfextinit_nuvolaris.py  nuvolaris.py  nuvolaris_cli.py  nuvolaris_client.py  nuvolaris_decorator.py  nuvolaris_environment.py  nuvolaris_job.py  openwhisk_client.py
metaflow_extensions/nuvolaris/toplevel/: mfextinit_nuvolaris.py  module_overrides.py  parameter_override.py  toplevel.py
runtime/: Dockerfile  requirements.txt
runtime/lib/: launcher.py
templates/: mf_nuvolaris_action.go  mf_nuvolaris_action.py
