# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#
[tool.poetry]
name = "nuvolaris_metaflow"
version = "0.1.0"
description = "Nuvolaris Metaflow Plugin"
authors = ["Francesco Timperi Tiberi <francesco@nuvolaris.io>"]
packages = [
    { include = "metaflow_extensions" },
    { include = "metaflow_extensions/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "1.3.0"
sagemaker = "2.59.8"
metaflow = { path = "../metaflow", develop = true }

[tool.poetry.dev-dependencies]
ipython = "^7.31.0"

[tool.setuptools]
packages = ["metaflow_extensions"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
